# ComfyUI-MyOriginalWaifu

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
comfy/: node.py  nodes.py
docs/workflows/: MyOriginalWaifuCLIP.json
modules/: core.py  engine.py  pipeline.py  prompt.py  rules.py  tags.py  test.py
modules/utils/: project.py  version.py
