[project]
name = "comfyui-myoriginalwaifu"
description = "My Original Waifu is a tag-based prompt-transformation engine for ComfyUI designed for creators who want their original characters to feel consistent, expressive, and faithfully rendered across every scene. Instead of manually adjusting tags each time you generate an image, you define the essence of your waifu, her look, her outfits, the way she appears in different contexts, and the engine transforms your prompt to match those intentions. It stays out of the way and simply follows your rules with clarity and consistency."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Deathspike/ComfyUI-MyOriginalWaifu"

[tool.comfy]
PublisherId = "deathspike"
DisplayName = "ComfyUI-MyOriginalWaifu"
Icon = ""
